--- a/sass/_component.sass
+++ b/sass/_component.sass
@@ -143,6 +143,7 @@
       width: 256px
       float: left
       margin-right: 16px
+  &.nw-articles-img-float-right
     
     h3
       font-size: 17px
