--- a/sass/_component.sass
+++ b/sass/_component.sass
@@ -84,8 +84,6 @@
   .block-title
     font-size: 16px
     color: #03030366
-.sponsor-block
-  margin-bottom: 16px
 
 .container.not-grid
   padding: 0
@@ -137,6 +135,7 @@
     font-size: 13px
     line-height: 18px
     color: #333
+    margin: 0
 
   &.nw-articles-img-float-left
     .img-tags-wrapper
@@ -144,7 +143,11 @@
       float: left
       margin-right: 16px
   &.nw-articles-img-float-right
-    
+    .img-tags-wrapper
+      width: 256px
+      float: right
+      margin-right: 16px
+
     h3
       font-size: 17px
       line-height: 20px
@@ -191,8 +194,18 @@
     font-size: 14px
     font-weight: 700
     color: #555
-
+.section-title
+  h2
+    text-align: center
+    font-size: 19px
+    line-height: 28px
+    margin-bottom: 15px
+    font-weight: bold
 @media only screen and (min-width: 768px)
   .nw-articles.nw-articles-img-float-left
     .img-tags-wrapper
       width: 135px
+    h3
+      a
+        font-size: 17px
+        line-height: 20px
