--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -84,6 +84,8 @@ $main-nav-l-lg: 84.31372549019608%
     height: auto
     > *
       width: 100%
+  .right
+    margin-bottom: 50px
 .center
   width: 100%
   .row
@@ -94,6 +96,8 @@ $main-nav-l-lg: 84.31372549019608%
   padding: 0 16px
 
 #more-story
+  &.nw-block
+    margin-bottom: 0
   .article-wrapper
     padding: 16px 0
     border-top: 1px solid #ddd
@@ -116,8 +120,77 @@ $main-nav-l-lg: 84.31372549019608%
 .sponsor-block
   .article-wrapper
     margin-bottom: 30px
+    &:last-child
+      padding-bottom: 16px
+      margin-bottom: 0
 
   /* **END OF MAIN NEWS** */
+    
+  /* **START OF newsweek conversations**  */
+#nw-conversations
+
+  /* **END OF newsweek conversations**  */
+.conversation-block
+  .conversation-block__texts
+    background-color: #000
+    color: #fff
+    padding: 40px 25px 30px
+    h3
+      font-weight: bold
+    time
+      font-size: 18px
+      color: #777
+  figure
+    margin: 0
+    padding: 0
+    overflow: hidden
+    position: relative
+    img
+      position: absolute
+      height: 100%
+      left: 50%
+      transform: translateX(-50%)
+    a
+      position: absolute
+      top: 0
+      bottom: 0
+      left: 0
+      right: 0
+      z-index: 2
+  .conversation-block__play
+    position: absolute
+    bottom: 0
+    left: 0
+    width: 53px
+    height: 53px
+    background-color: $nw-red
+    &::before
+      content: ""
+      position: absolute
+      top: 50%
+      left: 50%
+      transform: translate(-50%, -50%)
+      border-top: 15px solid transparent
+      border-bottom: 15px solid transparent
+      border-left: 24px solid #fff
+.conversation-main
+  height: 100%
+  > *
+    height: 100%
+.conversations-other
+  .conversation-block
+    .conversation-block__texts
+      padding: 16px
+      h3
+        font-size: 18px
+  .conversation-block__play
+    width: 34px
+    height: 34px
+    &::before
+      border-top-width: 8px
+      border-bottom-width: 8px
+      border-left-width: 12px
+
   /* **START OF MAGAZINE PREVIEW**  */
   /* **END OF MAGAZINE PREVIEW**  */
 
@@ -141,6 +214,9 @@ $main-nav-l-lg: 84.31372549019608%
 @media only screen and (min-width: 768px)
   .col-w-pcent
     width: 55%
+  .main-news-wrapper
+    .right
+      margin-bottom: 0
 @media only screen and (min-width: 992px)
   .col-w-pcent
     width: 40%
