--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -4,6 +4,10 @@ $main-nav-l-lg: 84.31372549019608%
   margin-top: 50px
   max-width: 1310px
 
+.main-news-wrapper
+  & ~ section
+    margin-bottom: 50px
+
 /* **START OF TOP MENU** */
 #top-menu
   background-color: $nw-red
@@ -175,8 +179,8 @@ $main-nav-l-lg: 84.31372549019608%
       border-left: 24px solid #fff
 .conversation-main
   height: 100%
-  > *
-    height: 100%
+  figure
+    min-height: 295px
 .conversations-other
   .conversation-block
     .conversation-block__texts
@@ -192,7 +196,93 @@ $main-nav-l-lg: 84.31372549019608%
       border-left-width: 12px
 
   /* **START OF MAGAZINE PREVIEW**  */
+.magazine-cover
+  figure
+    position: relative
+  img
+    width: 100%
+  > a
+    text-align: center
+    padding: 10px 12px
+    font-weight: bold
+    display: block
+    background-color: #f4f5f6
+.magazine-block
+  margin-bottom: 12px
+  picture
+    display: block
+    position: relative
+    height: 0
+    padding-bottom: 60%
+    overflow: hidden
+    margin-bottom: 10px
+    img
+      position: absolute
+      height: 100%
+      left: 50%
+      transform: translateX(-50%)
+  .categories
+    > span
+      position: relative
+    margin-bottom: 10px
+  h4
+    font-weight: 700
+    font-size: 16px
+
+
+
   /* **END OF MAGAZINE PREVIEW**  */
+  /* **START OF NW PRODUCTS**  */
+#nw-products
+  h2
+    font-size: 16px
+    color: $nw-red
+    font-weight: 700
+  .subscribe-product-wrapper
+    padding: 24px 20px 20px
+  .mag-covers-wrapper
+    width: 170px
+    margin: 0 auto
+    position: relative
+    padding-right: 90px
+    padding-bottom: 13px
+    box-sizing: content-box
+
+  .mag-cover-thumb
+    img
+      width: 100%
+  .current-cover
+    width: 170px
+    position: absolute
+    bottom: 0
+    right: 0
+  .nw-product-info
+    text-align: center
+    h3
+      font-size: 20px
+      font-weight: 700
+    h3, p
+      margin: 20px 0
+    a
+      display: inline-block
+  #newsletter
+    .nw-product-img-wrapper
+      height: 160px
+      overflow: hidden
+      position: relative
+      img
+        width: 100%
+        position: absolute
+        top: 50%
+        transform: translateY(-50%)
+        
+    .nw-product-info
+      padding: 20px
+    .row
+      border: 1px solid #eee
+#newsletter, #subscribe
+  margin-bottom: 30px
+  /* **END OF NW PRODUCTS**  */
 
 @media only screen and (max-width: 480px)
   .subscribe-auth-btn
@@ -217,6 +307,23 @@ $main-nav-l-lg: 84.31372549019608%
   .main-news-wrapper
     .right
       margin-bottom: 0
+  #nw-magazine-preview
+    picture
+      padding-bottom: 100%
+    h4
+      font-size: 20px
+  #nw-products
+    .nw-product-info
+      text-align: left
+    #newsletter
+      .nw-product-img-wrapper
+        height: 100%
+        img
+          height: 100%
+          width: auto
+          left: 50%
+          top: 0
+          transform: translateX(-50%)
 @media only screen and (min-width: 992px)
   .col-w-pcent
     width: 40%
